# detect-secrets-in-repo

./: .env.example  1.txt  README.md  experiment_agents.ipynb  github_mcp.ipynb  main.ipynb  main.py  pyproject.toml
.github/workflows/: agentic_workflow.yml  detect_secrets.yml
domain/: models.py  settings.py
domain/agents/: chunk_agregator.py  chunk_exporter.py  secrets_detector.py
samples/: leaky_sample.py
scripts/: agentic_workflow.py
