[project]
name = "agents-demo"
version = "0.1.0"
description = "This is a demo project for Microsoft Agent Framework. This project's scope is to flag a github repository and write comments to a pull request that might contain sensitive information like passwords, keys, PII."
authors = [
    {name = "iulia filimon",email = "iulia-maria.filimon@mhp.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "agent-framework (>=1.0.0b251016,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
agent-framework = {allow-prereleases = true}
